examples/datalog/15_arithmetic/19_unary_minus.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unary_minus
Knowledge graph 'test_unary_minus' created.
Switched to knowledge graph: test_unary_minus
> .kg use test_unary_minus
Switched to knowledge graph: test_unary_minus
> +vals[(5,), (10,), (15,)].
Inserted 3 fact(s) into 'vals'.
> neg_result(X, Y) :- vals(X), Y = X - 20.
Script error: Parse error: Invalid term: 'X - 20'
