examples/datalog/15_arithmetic/19_unary_minus.dl
% Test: Unary minus and negative operations
% Expected: Negative numbers handled correctly
% Category: 15_arithmetic
% Priority: P1 - Arithmetic operations

.kg create test_unary_minus
.kg use test_unary_minus

% Base data
+vals[(5,), (10,), (15,)].

% Subtract to get negative
neg_result(X, Y) :- vals(X), Y = X - 20.

?- neg_result(X, Y).

% Multiply by -1
negate(X, Y) :- vals(X), Y = X * -1.

?- negate(X, Y).

% Double negative operation
double_neg(X, Y) :- vals(X), Y = 0 - (0 - X).

?- double_neg(X, Y).

.kg use default
.kg drop test_unary_minus
